--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <title>HypeMC - Equipe</title>
     <link rel="shortcut icon" href="https://i.imgur.com/4fUkipD.png">
 
-    <link rel="stylesheet" href="./equipe_files/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="./equipe_files/style.php" type="text/css">
-    <link rel="stylesheet" href="./equipe_files/personalizado.css">
-    <link rel="stylesheet" href="./equipe_files/checkboxcustom.css" type="text/css">
+    <link rel="stylesheet" href="bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="style.php" type="text/css">
+    <link rel="stylesheet" href="personalizado.css">
+    <link rel="stylesheet" href="checkboxcustom.css" type="text/css">
 
-    <link href="./equipe_files/font-awesome.min.css" rel="stylesheet">
+    <link href="font-awesome.min.css" rel="stylesheet">
     
-    <script src="./equipe_files/sweetalert.min.js.transferir"></script>
-    <script type="text/javascript" src="./equipe_files/sweetalert2.all.min.js.transferir"></script><style type="text/css">@-webkit-keyframes swal2-show {
+    <script src="sweetalert.min.js.transferir"></script>
+    <script type="text/javascript" src="sweetalert2.all.min.js.transferir"></script><style type="text/css">@-webkit-keyframes swal2-show {
   0% {
     -webkit-transform: scale(0.7);
             transform: scale(0.7); }
@@ -1309,7 +1309,7 @@ body.swal2-no-backdrop .swal2-shown {
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg); } }
 </style>
-    <script src="./equipe_files/baa9b7508e.js.transferir" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">/*!
+    <script src="baa9b7508e.js.transferir" crossorigin="anonymous"></script><style media="all" id="fa-v4-font-face">/*!
  * Font Awesome Free 5.15.4 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
  */@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-solid-900.svg#fontawesome) format("svg")}@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-brands-400.svg#fontawesome) format("svg")}@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-regular-400.svg#fontawesome) format("svg");unicode-range:U+f004-f005,U+f007,U+f017,U+f022,U+f024,U+f02e,U+f03e,U+f044,U+f057-f059,U+f06e,U+f070,U+f075,U+f07b-f07c,U+f080,U+f086,U+f089,U+f094,U+f09d,U+f0a0,U+f0a4-f0a7,U+f0c5,U+f0c7-f0c8,U+f0e0,U+f0eb,U+f0f3,U+f0f8,U+f0fe,U+f111,U+f118-f11a,U+f11c,U+f133,U+f144,U+f146,U+f14a,U+f14d-f14e,U+f150-f152,U+f15b-f15c,U+f164-f165,U+f185-f186,U+f191-f192,U+f1ad,U+f1c1-f1c9,U+f1cd,U+f1d8,U+f1e3,U+f1ea,U+f1f6,U+f1f9,U+f20a,U+f247-f249,U+f24d,U+f254-f25b,U+f25d,U+f271-f274,U+f279,U+f28b,U+f28d,U+f2b5-f2b6,U+f2b9,U+f2bb,U+f2bd,U+f2c1-f2c2,U+f2d0,U+f2d2,U+f2dc,U+f2ed,U+f3a5,U+f3d1,U+f410}@font-face{font-family:"FontAwesome";font-display:block;src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.eot);src:url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.eot?#iefix) format("embedded-opentype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.woff2) format("woff2"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.woff) format("woff"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.ttf) format("truetype"),url(https://ka-f.fontawesome.com/releases/v5.15.4/webfonts/free-fa-v4deprecations.svg#fontawesome) format("svg");unicode-range:U+f003,U+f006,U+f014,U+f016,U+f01a-f01b,U+f01d,U+f040,U+f045-f047,U+f05c-f05d,U+f07d-f07e,U+f087-f088,U+f08a-f08b,U+f08e,U+f090,U+f096-f097,U+f0a2,U+f0e4-f0e6,U+f0ec-f0ee,U+f0f5-f0f7,U+f10c,U+f112,U+f114-f115,U+f11d,U+f123,U+f132,U+f145,U+f147-f149,U+f14c,U+f166,U+f16a,U+f172,U+f175-f178,U+f18e,U+f190,U+f196,U+f1b1,U+f1d9,U+f1db,U+f1f7,U+f20c,U+f219,U+f230,U+f24a,U+f250,U+f278,U+f27b,U+f283,U+f28c,U+f28e,U+f29b-f29c,U+f2b7,U+f2ba,U+f2bc,U+f2be,U+f2c0,U+f2c3,U+f2d3-f2d4}</style><style media="all" id="fa-v4-shims">/*!
@@ -1418,7 +1418,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
             }
 			</style>
             <div class="container text-center text-white new-text">
-                <img src="./equipe_files/TMHNcvD.png" class="img-fluid" alt="">
+                <img src="TMHNcvD.png" class="img-fluid" alt="">
             </div>
         </div>
         <style>
@@ -1440,18 +1440,18 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
                         <ul class="navbar-nav">
                                                             <li class="nav-item">
                                     <a target="" class="nav-link" href="https://hypemc.lojasquare.com.br/"> 
-                                        <img src="./equipe_files/nFqSi07.png" class="img-fluid"> 
+                                        <img src="nFqSi07.png" class="img-fluid"> 
                                         Inicio                                    </a>
                                 </li>
                                                                
                                                                 <li class="nav-item">
                                     <a target="" class="nav-link" href="https://hypemc.lojasquare.com.br/equipe"> 
-                                        <img src="./equipe_files/EzOjQIA.png" class="img-fluid"> 
+                                        <img src="EzOjQIA.png" class="img-fluid"> 
                                         Equipe                                    </a>
                                 </li>
                                                                 <li class="nav-item">
                                     <a target="" class="nav-link" href="https://hypemc.lojasquare.com.br/regras"> 
-                                        <img src="./equipe_files/8jsLPIO.png" class="img-fluid"> 
+                                        <img src="8jsLPIO.png" class="img-fluid"> 
                                         Regras                                    </a>
                                 </li>
                                                         </ul>
@@ -1485,7 +1485,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
 													<div class="col-md-2 col-ms-4 col-xs12">
 								<div class="show-equipe">
 									<div class="row">
-																					<img style="border-radius: 10px;" src="./equipe_files/99.png" class="img-fluid centralizar">
+																					<img style="border-radius: 10px;" src="99.png" class="img-fluid centralizar">
 																				</div>
 									<div class="row">
 										<h4 class="card-text mt-0 centralizar" style="margin-top: 10px !important;color: #000;">Le_an_dro<br></h4>
@@ -1506,7 +1506,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
 													<div class="col-md-2 col-ms-4 col-xs12">
 								<div class="show-equipe">
 									<div class="row">
-																					<img style="border-radius: 10px;" src="./equipe_files/99(1).png" class="img-fluid centralizar">
+																					<img style="border-radius: 10px;" src="99(1).png" class="img-fluid centralizar">
 																				</div>
 									<div class="row">
 										<h4 class="card-text mt-0 centralizar" style="margin-top: 10px !important;color: #000;">Invalido<br></h4>
@@ -1527,7 +1527,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
 													<div class="col-md-2 col-ms-4 col-xs12">
 								<div class="show-equipe">
 									<div class="row">
-																					<img style="border-radius: 10px;" src="./equipe_files/99(2).png" class="img-fluid centralizar">
+																					<img style="border-radius: 10px;" src="99(2).png" class="img-fluid centralizar">
 																				</div>
 									<div class="row">
 										<h4 class="card-text mt-0 centralizar" style="margin-top: 10px !important;color: #000;">Invalido<br></h4>
@@ -1548,7 +1548,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
 													<div class="col-md-2 col-ms-4 col-xs12">
 								<div class="show-equipe">
 									<div class="row">
-																					<img style="border-radius: 10px;" src="./equipe_files/99(3).png" class="img-fluid centralizar">
+																					<img style="border-radius: 10px;" src="99(3).png" class="img-fluid centralizar">
 																				</div>
 									<div class="row">
 										<h4 class="card-text mt-0 centralizar" style="margin-top: 10px !important;color: #000;">Invalido<br></h4>
@@ -1571,7 +1571,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
         </div>
     </footer>
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.js" type="text/javascript" crossorigin="anonymous"></script> -->
-    <script src="./equipe_files/jquery.js.transferir" type="text/javascript"></script>
+    <script src="jquery.js.transferir" type="text/javascript"></script>
 
     <script>
     var MCSTATUS_COUNT = 0;
@@ -1689,10 +1689,10 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
         });
     }
     McStatusInit('hype.arplex.host', '25565', 'Minecraft');
-</script><script src="./equipe_files/axios.js.transferir"></script>    <script src="./equipe_files/popper.min.js.transferir" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="./equipe_files/bootstrap.min.js.transferir"></script>
-    <script src="./equipe_files/security.js.transferir" view="home"></script>
-    <script src="./equipe_files/bootbox.min.js.transferir"></script>
+</script><script src="axios.js.transferir"></script>    <script src="popper.min.js.transferir" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+    <script src="bootstrap.min.js.transferir"></script>
+    <script src="security.js.transferir" view="home"></script>
+    <script src="bootbox.min.js.transferir"></script>
     <script>
         $(document).ready(function(){
             $('#leuTermos').click(function(){
@@ -1713,7 +1713,7 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
             });
         });
     </script>
-    <script src="./equipe_files/clipboard.min.js.transferir"></script>
+    <script src="clipboard.min.js.transferir"></script>
 
     <script type="text/javascript">
         var clipboard = new Clipboard('.copyIp');
@@ -1738,4 +1738,4 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
         });
     </script>
 
-<iframe src="./equipe_files/background.html" style="display: none; width: 0; height: 0; border: none; margin: 0;"></iframe></body></html>
+<iframe src="background.html" style="display: none; width: 0; height: 0; border: none; margin: 0;"></iframe></body></html>
