--- a/index.html
+++ b/index.html
@@ -1439,18 +1439,18 @@ function getModesMatrix(c,d,b){for(var e=[],a=0;a<d;a++){for(var f=[],g=0;g<b;g+
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                         <ul class="navbar-nav">
                                                             <li class="nav-item">
-                                    <a target="" class="nav-link" href="https://hypemc.lojasquare.com.br/"> 
+                                    <a target="" class="nav-link" href="https://hype-mc.github.io/inicio/"> 
                                         <img src="nFqSi07.png" class="img-fluid"> 
                                         Inicio                                    </a>
                                 </li>
                                                                
                                                                 <li class="nav-item">
-                                    <a target="" class="nav-link" href="https://hypemc.lojasquare.com.br/equipe"> 
+                                    <a target="" class="nav-link" href="#"> 
                                         <img src="EzOjQIA.png" class="img-fluid"> 
                                         Equipe                                    </a>
                                 </li>
                                                                 <li class="nav-item">
-                                    <a target="" class="nav-link" href="https://hypemc.lojasquare.com.br/regras"> 
+                                    <a target="" class="nav-link" href="#"> 
                                         <img src="8jsLPIO.png" class="img-fluid"> 
                                         Regras                                    </a>
                                 </li>
